--- a/package.json
+++ b/package.json
@@ -13,6 +13,13 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+   "dependencies": {
+    "@apollo/client": "^3.10.4",
+    "@apollo/server": "^4.10.4",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "graphql": "^16.8.1"
+  },
   "devDependencies": {
     "concurrently": "^8.2.0"
   }
