--- a/package.json
+++ b/package.json
@@ -8,17 +8,18 @@
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm run dev\"",
     "install": "cd server && npm i && cd ../client && npm i",
     "build": "cd client && npm run build",
-    "render-build":"npm install && npm run build"
+    "render-build": "npm install && npm run build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-   "dependencies": {
+  "dependencies": {
     "@apollo/client": "^3.10.4",
     "@apollo/server": "^4.10.4",
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "graphql": "^16.8.1"
+    "graphql": "^16.8.1",
+    "mongodb": "^6.7.0"
   },
   "devDependencies": {
     "concurrently": "^8.2.0"
